# ChangeLog for app-misc/cl-useful-meta
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cl-useful-meta-10.8.81.ebuild:
  Added sys-apps/lm_sensors

  20 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cl-useful-meta-10.8.81.ebuild:
  Moved vim to cl-desktop-meta

  20 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cl-useful-meta-10.8.81.ebuild:
  Moved app-misc/screen to css-meta

*cl-useful-meta-10.8.81 (13 Aug 2010)

  13 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-useful-meta-10.5.83.ebuild, +cl-useful-meta-10.8.81.ebuild:
  New version of meta-package.

  21 Jul 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cl-useful-meta-10.5.83.ebuild:
  Added app-misc/screen

  20 Jul 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cl-useful-meta-10.5.83.ebuild:
  Added sys-apps/smartmontools

  11 Jun 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cl-useful-meta-10.5.83.ebuild:
  Moved fplugd to css-meta

  08 Jun 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cl-useful-meta-10.5.83.ebuild:
  Added net-fs/nfs-utils

*cl-useful-meta-10.5.83 (02 Jun 2010)

  02 Jun 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-useful-meta-10.5.83.ebuild:
  version bump
