@@ -1,2 +1,2 @@
-EBUILD cl-useful-meta-10.8.81.ebuild 1201 RMD160 8783bae6c306887835c9d59490bb6a0b57e15586 SHA1 92821f14ee2105305692f39727c534ab60f489a9 SHA256 3fc9de20d8d657ca1c51fdeae017131a27f3236390644c85f78d51adb501172c
-MISC ChangeLog 1375 RMD160 d147a04ded1487391c93001379849bfe76dae5f3 SHA1 91df4c2d0dca858f46ddcbf330b6cf92ac6d5eee SHA256 c20d809a9749cc39bf93bc69e2a9ed38344c7f06067c9d7828cac27723b3dfbf
+EBUILD cl-useful-meta-10.8.81.ebuild 1255 RMD160 7b7d841499e34dba2f2fe66d7d308770675b2634 SHA1 3c09f9e2e98538165293980faee92d37eeaa93d8 SHA256 4a9bc8e8d032133007527bc3a75c2139707bb0f2e7928fdca2fe156af83b196c
+MISC ChangeLog 1502 RMD160 cf59ad04f9a61a71a16a44aea7f6f9236254a7f8 SHA1 6043417d897fa4c5488314b270acc166756f061e SHA256 4fbc3c39a68fb4b6516982d78618074b94ae38b2493f34c9c9f617322cb5a0ed
