@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  cl-useful-meta-10.8.81.ebuild:
+  Added net-dialup/rp-pppoe
+
   25 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
   cl-useful-meta-10.8.81.ebuild:
   Added sys-apps/lm_sensors
